[package]
name = "not actually using cargo to build yet, just deps"
version = "0.0.1"
authors = []
[lib]
name = "dummy"
path = "dummy.rs"
[dependencies]
vec_map = "0.6"
fnv = "1"
threadpool = "1.0"
num_cpus = "0.2"

#regex = "0.1.9"
#regex_macros = "0.1.4"

[features]
default = []
use_llvm = ["autollvm"]

# this pulls in syntex via bindgen :(
# todo use features
[dependencies.autollvm]
version = "=0.0.1"
optional = true

[dependencies.nodrop]
version = "0.1"
features = ["use_union"]
